# TimeStamp-Randomizer

./: .gitignore  README.md  pyproject.toml  requirements.txt  timestamp_randomizer.py
src/gui/: main.py
src/gui/resources/: Ui_timestamp_randomizer.py  timestamp_randomizer.ui
src/gui/utils/: cmd_text_edit.py
src/timestamp_randomizer/: __init__.py  config.py  file_timestamp_manager.py  folder_timestamp_manager.py
src/timestamp_randomizer/utils/: create_table.py  get_randomized_date.py  get_randomized_timestamps.py
tests/: __init__.py  test.db  test.py
